tests/final/expect/15__torture__malformed_pp_directive_no_crash.diag
Diagnostics:
Error: preprocessing failed
/Users/calebsv/Desktop/CodeWork/fisiCs/tests/final/cases/15__torture__malformed_pp_directive_no_crash.c:1:9: error: invalid parameter list in #define BROKEN
/Users/calebsv/Desktop/CodeWork/fisiCs/tests/final/cases/15__torture__malformed_pp_directive_no_crash.c:1:9: error: invalid parameter list in #define BROKEN
